issue with alignments on the settings. needs debugging.

--- a/style.css
+++ b/style.css
@@ -453,7 +453,6 @@ nav {
     position: absolute;
     width: 90%;
     max-width: 350px;
-    height: 500px;
     background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     border-radius: 4px;
@@ -489,4 +488,13 @@ nav {
     width: 38px;
     margin-right: 10px;
     border-radius: 50%;
+}
+
+.settings-links a {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: space-between;
+    text-decoration: none;
+    color: #626262;
 }
